extends Control

# SIGNALS ######################################################################

# MEMBERS ######################################################################

################################################################################
# VIRTUAL ######################################################################

func _ready() -> void:
	Globals.user_message_sending \
		.connect(_on_message_sending)
	
	$MessageLabel.self_modulate = Color.TRANSPARENT

################################################################################
# PUBLIC #######################################################################

################################################################################
# PRIVATE ######################################################################

func _reset_timer() -> void:
	var timer: Timer = $MessageTimer
	
	if not timer.is_stopped():
		timer.stop()
	
	timer.start()

################################################################################
# SIGNAL HANDLERS ##############################################################

func _on_timer_timeout() -> void:
	$AnimationPlayer.play_backwards("show_message")

################################################################################

func _on_message_sending(message: String) -> void:
	$AnimationPlayer.play("show_message")
	$MessageLabel.text = message
	_reset_timer()

################################################################################

